index.html modificated

--- a/NVL-HTML-P2a/index.html
+++ b/NVL-HTML-P2a/index.html
@@ -7,6 +7,41 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <p>The <strong>Iberian Península</strong> is shaped today by an amalgam of two minor plates, the Iberian Plate and a part of the
+    Alboran Plate, which have been relatively independent during the Cenozoic and have ended up trapped
+    between two major plates, <strong>Nubia</strong> and <strong>Eurasia</strong>. This complex tectonic arrangement, together with the
+    different stages of mechanical coupling-decoupling between the involved plates and the different rheology
+    between the east and west of Iberia, has produced a relief pattern and a distribution of characteristic
+    <strong>Cenozoic Basin</strong> and <strong>Ranges Deformation Belts</strong>, very different from other areas of the <strong>Western Europe
+    Alpine</strong> foreland.</p>
+    <p>Given its size, amount of <strong>Cenozoic deformation</strong>, and degree of geological knowledge, the interior of Iberia is a
+    true natural laboratory for understanding the interactions between farfield stresses occurring at the plate
+    borders and the formation and evolution of intraplate basins and chains.</p>
+    <p>Intraplate ranges in the <strong>Iberian Peninsula</strong> offer a genuine sample of possible structural styles. On the one
+    hand, the presence or absence of sedimentary cover, mainly represented by Mesozoic sediments, produces
+    two sets of well-differentiated ranges. Thus, in the eastern part and fitting with the location of Permo-Triasic
+    and Cretaceous rifting processes, the ranges related to the Iberian Chain were developed with an important
+    tectonic inversion. Although the deformation involves the basement, detachments also appear in the cover.
+    In contrast, the absence of a sedimentary cover and previous extensional structures in the western part
+    excludes tectonic inversion. Therefore, here Cenozoic deformation developed over an area with a more
+    homogeneous rheology, which produced a fairly regular distribution pattern of Cenozoic chains, basins,
+    and deformation belts.</p>
+    <p>In these ranges without cover (developed in the Variscan Massif), several types of structures can be
+    distinguished depending on the nature of the basement and their position with respect to large lithospheric
+    and crustal folds, which seem to follow their formation. These structures correspond to pop-ups and triangle zones; 
+    monoclinal ramps with the formation of a <strong>basin in the footwall</strong>; <strong>basement imbricate thick-skinned</strong> and
+    <strong>thin-skinned thrust systems</strong>; and <strong>piggyback basins</strong>.</p>
+    <p>In this study, geological and geophysical data collected from the intraplate deformation of central-west Iberia
+    are used to describe the crustal structure affected by compressive stresses for the full length of 700 km of the
+    <strong>Spanish-Portuguese Central System</strong> (SPCS). Unlike other ranges of the interior of Iberia (e.g., Iberian Chain),
+    the role of tectonic inversion in the SPCS is negligible (except in the area closest to the Atlantic, containing
+    a Mesozoic record). Because the rates of intraplate deformation in central Iberia during the Cenozoic appear
+    to be much smaller than those typical of plate boundary orogens, the presence of thrusts with a throw up to
+    5 km provides a very special character for this range. Another interesting aspect of the SPCS structural
+    arrangement is the presence of a major strike-slip fault parallel to the thrusts with a 500-km-long trace: the
+    <strong>Messejana-Plasencia (MP) Fault</strong>. To simultaneously interpret both types of structures, we explore the concept
+    of strain partitioning in an intraplate tectonic regime subject to lithospheric folding. We also discuss the
+    possible existence of a crustal detachment connecting the studied range with both related orogens: <strong>Betics
+    (S) and Pyrenees (N)</strong>.</p>
 </body>
 </html>
