--- a/NVL-HTML-P10a/encuesta de satisfacción.html
+++ b/NVL-HTML-P10a/encuesta de satisfacción.html
@@ -49,6 +49,8 @@
                 <option value=”FR”>Excelente</option>
             </select>
         </div>
+        <br>
+        <button>Enviar encuesta</button>
     </form>
 </body>
 </html>
